fix: footer links contrast ratio

--- a/style.css
+++ b/style.css
@@ -654,6 +654,11 @@ a {
     color: #575757!important;
 }
 
+.text-contrast {
+    font-weight: 400;
+    color: #333333!important;
+}
+
 .container {
     max-width: 1000px;
 }
